# restaurant-booking-agent

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  project.MD  sst.config.ts  turbo.json
backend/: .env.example  conftest.py  pyproject.toml  run.sh
backend/app/: agent.py  config.py  context.py  exceptions.py  handler_bookings.py  handler_chat.py  hooks.py  instrumentation.py  logging.py  main.py  metrics.py  middleware.py  tracer.py
backend/app/agent/: core.py  hooks.py  prompt_loader.py  prompts.py
backend/app/api/routes/: bookings.py  chat.py
backend/app/models/: schemas.py
backend/app/repositories/: bookings.py
backend/app/tools/: bookings.py
backend/braintrust/prompts/: restaurant_booking_agent.py
backend/evals/: README.md  cases.py
backend/evals-old/braintrust/: datasets.py  eval_discovery.py  eval_trajectory.py
backend/evals-old/braintrust-prompts/prompts/: restaurant_booking_agent.py
backend/evals-old/cases/: agent_evals.py
backend/evals-old/scorers/common/: tool_routing.py
backend/evals-old/scorers/discovery/: agent_helpfulness.py  agent_proactivity.py  prompts.py  rag_quality.py
backend/evals/booking/cancellation/: cases.py
backend/evals/booking/creation/: cases.py
backend/evals/booking/retrieval/: cases.py
backend/evals/braintrust/: config.py  discovery.py  eval_discovery.py  eval_output_quality.py  eval_trajectory.py  manifest.py
backend/evals/braintrust/scorers/: __init__.py
backend/evals/cases/: __init__.py  common.py  discovery.py
backend/evals/config/strands/: agent.py
backend/evals/discovery/: cases.py
backend/evals/discovery/experiment_files/: eval_20260410_135707.json
backend/evals/discovery/strands/: eval.py  test_eval_minimal.py
backend/evals/modules/discovery/: cases.py
backend/evals/modules/security/: cases.py
backend/evals/new-evals/: __init__.py  agent.py  utils.py
backend/evals/new-evals/discovery/: __init__.py  eval.py  evaluators.py  experiment_generator.py  (+1 more)
backend/evals/scorers/: output_quality_scorer.py  trajectory_scorer.py
backend/evals/security/: cases.py
backend/evals/strands/: discovery_eval.py  generated_experiment.py  otel_scaffold.py  output_quality_eval.py  test_agent_evals.py  trajectory_eval.py
backend/experiment_files/: eval_20260409_142830.json  eval_20260409_185131.json  eval_20260410_090758.json  eval_20260410_091624.json  eval_20260410_133143.json  eval_20260410_133416.json  eval_20260410_134440.json  eval_20260410_151833.json
backend/scripts/: create_braintrust_dataset.py
backend/tests/: conftest.py
backend/tests/evals/: advanced_eval.py  basic_eval.py  test_agent_evals.py  trajectory_eval.py
backend/tests/integration/: conftest.py  test_agent.py  test_api.py  test_repositories.py
backend/tests/unit/: conftest.py  test_api.py  test_cases.py  test_repositories.py  test_scorers.py
infra/: ai.ts  (+5 more)
(+98 files in other folders)
